Added Places and Dates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:oracle:thin:@ora2.uhk.cz:1521:ORCL?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:oracle:thin:@ora2.uhk.cz:1521:ORCL
 spring.datasource.username=doondralu2
 spring.datasource.password=doondralu2dordb
 spring.jpa.hibernate.ddl-auto=update
