--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:oracle:thin:@ora2.uhk.cz:1521:ORCL
-spring.datasource.username=doondralu2
-spring.datasource.password=doondralu2dordb
+spring.datasource.url=jdbc:oracle:thin:@db.server:1521:ORCL
+spring.datasource.username=username
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
